--- a/todo/templates/todo/read.html
+++ b/todo/templates/todo/read.html
@@ -6,4 +6,16 @@
     <h5>{{todo.due_date}}</h5>
     <a href="/todos/{{todo.id}}/delete">삭제</a>
     <a href="/todos/{{todo.id}}/edit">수정</a>
+    
+    <hr>
+    
+    <form action="/todos/{{todo.id}}/comment/create/" method="post">
+        {% csrf_token %}
+        <input type="text" name="content"/>
+        <input type="submit" />
+    </form>
+    
+    {% for comment in todo.comment_set.all %}
+        <h4>{{comment.content}}</h4>
+    {% endfor %}
 {% endblock %}
